@@ -3,47 +3,46 @@ package ru.itmo;
 import  ru.itmo.data.Color;
 import  ru.itmo.data.Country;
 import  ru.itmo.entities.DBPerson;
-import jakarta.servlet.http.HttpServletRequest;
+import javax.servlet.http.HttpServletRequest;
 
 import javax.persistence.criteria.*;
 import java.time.LocalDateTime;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 import java.util.function.Function;
 
 public class PersonFilter {
-    private final Map<String, Function<String, ?>> converters = Map.ofEntries(
-        Map.entry("name", (String x) -> x),
-        Map.entry("height", Float::parseFloat),
-        Map.entry("eyeColor", Color::valueOf),
-        Map.entry("hairColor", Color::valueOf),
-        Map.entry("nationality", Country::valueOf),
-        Map.entry("coordinates.x", Long::parseLong),
-        Map.entry("coordinates.y", Double::parseDouble),
-        Map.entry("location.x", Integer::parseInt),
-        Map.entry("location.y", Float::parseFloat),
-        Map.entry("location.z", Float::parseFloat),
-        Map.entry("creationDate", LocalDateTime::parse)
-    );
+    private final Map<String, Function<String, ?>> converters = new HashMap<String, Function<String, ?>>() {{
+        put("name", (String x) -> x);
+        put("height", Float::parseFloat);
+        put("eyeColor", Color::valueOf);
+        put("hairColor", Color::valueOf);
+        put("nationality", Country::valueOf);
+        put("coordinates.x", Long::parseLong);
+        put("coordinates.y", Double::parseDouble);
+        put("location.x", Integer::parseInt);
+        put("location.y", Float::parseFloat);
+        put("location.z", Float::parseFloat);
+        put("creationDate", LocalDateTime::parse);
+    }};
     private final HashMap<String, String> filters = new HashMap<>();
 
     public PersonFilter(HttpServletRequest request){
-        List<String> param_fields = List.of("name", "height", "eye_color", "hair_color", "nationality", "coordinates_x", "coordinates_y", "location_x", "location_y", "location_z", "creation_date");
-        Map<String, String> params_to_object_fields = Map.ofEntries(
-                Map.entry("name", "name"),
-                Map.entry("height", "height"),
-                Map.entry("eye_color", "eyeColor"),
-                Map.entry("hair_color", "hairColor"),
-                Map.entry("nationality", "nationality"),
-                Map.entry("creation_date", "creationDate"),
-                Map.entry("location_x", "location.x"),
-                Map.entry("location_y", "location.y"),
-                Map.entry("location_z", "location.z"),
-                Map.entry("coordinates_x", "coordinates.x"),
-                Map.entry("coordinates_y", "coordinates.y"),
-                Map.entry("coordinates_z", "coordinates.z")
-        );
+        List<String> param_fields = Arrays.asList("name", "height", "eye_color", "hair_color", "nationality", "coordinates_x", "coordinates_y", "location_x", "location_y", "location_z", "creation_date");
+        Map<String, String> params_to_object_fields = new HashMap<String, String>(){
+            {
+                put("name", "name");
+                put("height", "height");
+                put("eye_color", "eyeColor");
+                put("hair_color", "hairColor");
+                put("nationality", "nationality");
+                put("creation_date", "creationDate");
+                put("location_x", "location.x");
+                put("location_y", "location.y");
+                put("location_z", "location.z");
+                put("coordinates_x", "coordinates.x");
+                put("coordinates_y", "coordinates.y");
+                put("coordinates_z", "coordinates.z");
+            }};
 
 
         for (String field_name : param_fields) {
@@ -67,7 +66,7 @@ public class PersonFilter {
     }
 
     public void prepareFilter(CriteriaBuilder cb, CriteriaQuery<DBPerson> query, Root<DBPerson> root) {
-        List<Predicate> predicates = new java.util.ArrayList<>(List.of());
+        List<Predicate> predicates = new ArrayList<>(Collections.emptyList());
 
         for (Map.Entry<String, String> filter : filters.entrySet()) {
             try {
@@ -78,4 +77,5 @@ public class PersonFilter {
         }
         query.where(predicates.toArray(new Predicate[]{}));
     }
+
 }
